[gd_scene load_steps=8 format=3 uid="uid://37tl0srs6y5x"]

[ext_resource type="Script" path="res://environment/room.gd" id="1_5tiqf"]
[ext_resource type="PackedScene" uid="uid://fbq1gq8ii7kr" path="res://environment/assets/scenes/Wall.tscn" id="2_i502u"]
[ext_resource type="PackedScene" uid="uid://lu327svpqo8a" path="res://environment/assets/scenes/Doorway.tscn" id="3_1k1tg"]
[ext_resource type="PackedScene" uid="uid://dl83me2f34nvp" path="res://environment/assets/scenes/Door.tscn" id="3_vg5o6"]
[ext_resource type="PackedScene" uid="uid://b8s5gpc8tabm6" path="res://environment/assets/scenes/Floor.tscn" id="5_x7pcd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1cpkb"]
albedo_color = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wmw6v"]
size = Vector3(1, 0.2995, 1.01512)

[node name="room" type="Node3D"]
script = ExtResource("1_5tiqf")

[node name="wallN" parent="." instance=ExtResource("2_i502u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15)

[node name="wallE" parent="." instance=ExtResource("2_i502u")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15, 0, 0)

[node name="wallS" parent="." instance=ExtResource("2_i502u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)

[node name="wallW" parent="." instance=ExtResource("2_i502u")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15, 0, 0)

[node name="roof" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 8, 0)
use_collision = true
size = Vector3(30, 0.1, 30)
material = SubResource("StandardMaterial3D_1cpkb")

[node name="floor" parent="." instance=ExtResource("5_x7pcd")]

[node name="doorN" parent="." instance=ExtResource("3_1k1tg")]
visible = false

[node name="door" parent="doorN" instance=ExtResource("3_vg5o6")]

[node name="doorE" parent="." instance=ExtResource("3_1k1tg")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15, 0, 0)
visible = false

[node name="door" parent="doorE" instance=ExtResource("3_vg5o6")]

[node name="doorS" parent="." instance=ExtResource("3_1k1tg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
visible = false

[node name="door" parent="doorS" instance=ExtResource("3_vg5o6")]

[node name="doorW" parent="." instance=ExtResource("3_1k1tg")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15, 0, 0)
visible = false

[node name="door" parent="doorW" instance=ExtResource("3_vg5o6")]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(26, 0, 0, 0, 26, 0, 0, 0, 26, 0, 3.96261, 0.196579)
shape = SubResource("BoxShape3D_wmw6v")

[connection signal="body_entered" from="Area3D" to="." method="_on_room_entered"]
